# example-llm-chatbot

./: README.md  asgi.py  pyproject.toml
app/: __init__.py
app/ai/: history.py
app/ai/model/: ollama.py
app/ai/prompt/: basic.py
app/ai/runnable/: ollama.py
app/ai/streaming/: answer.py
app/api/: __init__.py
app/api/ai/model/: base.py
app/api/ai_model/: base.py
app/api/chatbot/: basic.py
app/api/chatbot/serializer/: request.py
app/core/: config.py
app/core/ai_model/: ollama.py
app/core/database/: redis.py
app/domain/ai/model/: ollama.py
app/domain/ai_model/: ollama.py
