[tool.poetry]
name = "example-llm-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.0"
fastapi = { version = "^0.115.8", extras = ["standard"] }
orjson = "^3.10.15"
itsdangerous = "^2.2.0"
redis = { version = "^5.2.1", extras = ["hiredis"] }

ollama = "^0.4.7"
langchain = "^0.3.17"
langchain-community = "^0.3.16"
langchain-ollama = "^0.2.3"
langchain-redis = "^0.1.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
